fix menu not overlaping post

--- a/css/menu.css
+++ b/css/menu.css
@@ -841,7 +841,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 .jumbotron .container {
   max-width: 100%;
-  z-index: 2;
+  z-index: 233;
 }
 @media screen and (min-width: 768px) {
   .jumbotron {
